--- a/composer.json
+++ b/composer.json
@@ -3,18 +3,16 @@
     "description": "crawelsers for mangadl_tbot",
     "type": "libraary",
     "require": {
-        "guzzlehttp/guzzle": "^7.0",
-        "nelexa/zip": "^3.3"
+        "guzzlehttp/guzzle": "^7.4",
+        "nelexa/zip": "^4.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^9"
     },
-    "authors": [
-        {
-            "name": "Seyed Morteza HakimZadeh",
-            "email": "s.mtz.hakim@gmail.com"
-        }
-    ],
+    "authors": [{
+        "name": "Seyed Morteza HakimZadeh",
+        "email": "s.mtz.hakim@gmail.com"
+    }],
     "license": "MIT",
     "autoload": {
         "psr-4": {
